--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
     "@ngrx/effects": "^17.2.0",
+    "@ngrx/entity": "^17.2.0",
+    "@ngrx/router-store": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
     "express": "^4.18.2",
